# mcp-zotero

./: .env.example  .gitignore  README.md  pyproject.toml
src/mcp_zotero/: __init__.py  config.py  models.py  server.py
src/mcp_zotero/rag/: __init__.py  chunking.py  document_index.py  encoder.py  extractor.py  tools.py  vector_store.py
tests/: test_config.py  test_rag_chunking.py  test_rag_vector_store.py  test_server.py  test_smoke.py
