[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_zotero"]

[project]
name = "mcp-zotero"
version = "0.3.0"
description = "MCP server for Zotero — library tools + optional semantic search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Neal Caren", email = "neal.caren@gmail.com" },
]
keywords = ["mcp", "zotero", "rag", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pyzotero>=1.5.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/nealcaren/mcp-zotero"
Repository = "https://github.com/nealcaren/mcp-zotero"
Issues = "https://github.com/nealcaren/mcp-zotero/issues"

[project.optional-dependencies]
rag = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pymupdf>=1.24.0",
    "tqdm>=4.60.0",
]
ocr = [
    "docling>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-zotero = "mcp_zotero:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
